# imap-granular-access-proxy

./: AGENTS.md  GOALS.md  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/: settings.local.json
src/imap_granular_access_proxy/: __init__.py  cli.py  forwarding.py  server.py  upstream.py
tests/: __init__.py  test_cli.py  test_forwarding.py  test_server.py  test_upstream.py
