[project]
name = "imap-granular-access-proxy"
version = "0.1.0"
description = "A lightweight IMAP proxy providing granular, per-folder access control"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "strayer" }
]
keywords = ["imap", "proxy", "email", "security", "access-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Twisted",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Security",
]

dependencies = [
    "twisted[tls]>=24.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-twisted>=1.14",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "ty>=0.0.9,<0.0.10",
]

[project.scripts]
imap-proxy = "imap_granular_access_proxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imap_granular_access_proxy"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "S101",   # assert usage (needed for tests)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=imap_granular_access_proxy --cov-report=term-missing"

[tool.coverage.run]
source = ["src/imap_granular_access_proxy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
